# Calculator-TDD

./: CMakeLists.txt  README.md  main.cpp
calculator/: CMakeLists.txt
calculator/include/: addition.h  calculator.h  division.h  math_factory.h  math_operator.h  multiplication.h  null_object.h  subtraction.h
calculator/src/: addition.cpp  calculator.cpp  division.cpp  math_factory.cpp  multiplication.cpp  null_object.cpp  subtraction.cpp
test/: CMakeLists.txt
test/include/: calculator_test.h
test/src/: calculator_test.cpp
